<resources>
    <string name="app_name">Hostel</string>
    <string name="available">Available</string>
    <string name="wifi">WIFI</string>
    <string name="ac">AC</string>
    <string name="food">Food</string>
    <string name="laundry">Laundry</string>
    <string name="view_details">View Details</string>
    <string name="price">Price</string>
    <string name="amenities">Amenities</string>
    <string name="gym">Gym</string>
    <string name="study_room">Study Room</string>
    <string name="parking">Parking</string>
    <string name="description">Description</string>
    <string name="room_options">Room Options</string>
    <string name="location">Location</string>
    <string name="policies">Policies</string>
    <string name="available_beds_message">Available beds</string>
    <string name="contact_hostel">Contact Hostel</string>
    <string name="book_now">Book now</string>
    <string name="select">Select</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="ticket">Ticket</string>
    <string name="full">Full</string>
    <string name="welcome_to_app">Welcome to Hostel App</string>
    <string name="login_to_proceed">Login to proceed</string>
    <string name="logout">Logout</string>
    <string name="loading">Loading</string>
    <string name="buy">Buy</string>
    <string name="preparation_time">Preparation Time</string>
    <string name="rating">Rating</string>
    <string name="ingredients">Ingredients</string>
    <string name="create_order">Create Order</string>
    <string name="no_selected">No Selected</string>
    <string name="end_icon">End Icon</string>
</resources>